welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: ')' expected but ']' found.
	if ((Math.abs(b-10)] < (Math.abs(a-10))) {
                           ^close10:5: error: illegal start of simple expression
	if ((Math.abs(b-10)] < (Math.abs(a-10))) {
                                               ^